Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7134

Qt Creator uses wrong UI language when built with Qt 4.8.0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 2.5.0-rc
    • Qt Creator 2.5.0-beta
    • All Other Issues
    • None
    • Mac OS X 10.6.8
    • 575aa068fabb4f20aef1dc991d781d6534a457fc

      QLocale::uiLanguages() should be used to auto-detect the desired UI language. Currently QLocale::system().name() is used, which reports the wrong language for systems where locale and UI language differ. See QTBUG-23221.

      See: https://qt.gitorious.org/qt-creator/qt-creator/blobs/master/src/app/main.cpp#line276

        For Gerrit Dashboard: QTCREATORBUG-7134
        # Subject Branch Project Status CR V

            con Eike Ziller
            tobiasfar T Markmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes