Fix Qt Creator using wrong UI language.

Qt 4.8 introduced QLocale::uiLanguages() and changed the behavior of
QLocale::system().name(). We now retrieve the list of preferred
uiLanguages when building against 4.8, and look for the first language
that we have translations for.

Task-number: QTCREATORBUG-7134
Change-Id: I90cdb6182732a013dc431b61a7976900e48e0d31
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>